force-app/main/default/objects/ppt_Toast__e/ppt_Toast__e.object-meta.xml
<CustomObject>
    <description>When this event is published, any subscriber listening to it will display a custom toast notification.</description>
    <label>Toast Event</label>
    <pluralLabel>Toast Events</pluralLabel>
</CustomObject>