force-app/main/default/objects/ppt_Toast__e/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <description>Valid values are: dismissible, pester, or sticky. Invalid values will be treated as dismissible</description>
    <label>Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>