force-app/main/default/objects/ppt_Toast__e/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <description>Valid values are: Success, Error, Info, Warn. Invalid values will be treated as Info</description>
    <label>Variant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>